<!-- Display application description, credits and developer information -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="5dp"
	android:paddingRight="5dp"
	android:orientation="vertical"
	tools:context=".GrandSlamTennis">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#00F"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" 
        android:paddingBottom="5dp"/>
	 
      <!-- Describe application description -->
	  <TextView
        android:id="@+id/appDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="@dimen/text_size"
        android:text="@string/app_desc"
        android:paddingBottom="16dp"/>
	 
	  <!-- show book credits -->
	  <TextView
        android:id="@+id/creditsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:text="@string/credits"/>
    
	  <LinearLayout 
	      	android:layout_width="match_parent"
    		android:layout_height="80dp"
    		android:orientation="horizontal">
    		
		  <ImageView
	        android:id="@+id/creditsImageView"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:src="@drawable/ic_launcher" 
	        android:paddingRight="10dp"/>
		  
		   <TextView
	        android:id="@+id/creditsMsgTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:textSize="@dimen/text_size"
	        android:text="@string/credits_msg"/>
	   </LinearLayout>
	  
	  <!-- show developer information -->
	  <TextView
        android:id="@+id/developerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:text="@string/developer"/>
	  
	  <LinearLayout 
	      	android:layout_width="match_parent"
    		android:layout_height="80dp"
    		android:orientation="horizontal">
		   
		  <ImageView
	        android:id="@+id/developerImageView"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:src="@drawable/slam_tennis" 
	        android:paddingRight="10dp"/>
		  
		   <TextView
	        android:id="@+id/appDeveloperTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:textSize="@dimen/text_size"
	        android:text="@string/app_developer"/>
	   </LinearLayout>
	  
	   <Button 
	       android:id="@+id/buttonStart"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/start"
	       android:textStyle="bold"
	       android:layout_gravity="center_vertical"
	       android:textSize="@dimen/title_size"
	       android:paddingTop="5dp"/>
	   
</LinearLayout>